AP-10599: Stop using indices array for calculation of chart
Javascript gives back the ‘wrong’ length of an array with arbitrary indices range

AP-10599 (JS Heatmap: Problems using a string column as labels) (+2 squashed commits)
Squashed commits:
[2720f335] AP-10599: Prevent Batik Error with invalid colors

AP-10599 (JS Heatmap: Problems using a string column as labels)
[9f69ff67] AP-10599: Fix disabled pagination

AP-10599 (JS Heatmap: Problems using a string column as labels)

--- a/org.knime.js.views.labs/js-src/org/knime/js/base/node/viz/heatmap/styles.css
+++ b/org.knime.js.views.labs/js-src/org/knime/js/base/node/viz/heatmap/styles.css
@@ -169,6 +169,7 @@ form {
 }
 
 .knime-legend {
+    overflow: visible;
     flex-grow: 0;
     flex-shrink: 0;
     padding: 2px 10px;
